kubernetes/curlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
spec:
  containers:
  - name: curl-container
    image: curlimages/curl:latest
    command: ["sh", "-c", "sleep 3600"] # Permite mantener el Pod activo
